# NppAIAssistant

./: .gitignore  CMakeLists.txt  PORT_PLAN.md  README.md
src/: ApiClient.h  ApiClient.mm  AssistantPanelView.h  AssistantPanelView.mm  CopilotAuth.h  CopilotAuth.mm  EditorHelpers.h  EditorHelpers.mm  HTTPClient.h  HTTPClient.mm  Keychain.h  Keychain.mm  PluginMain.mm  Preferences.h  Preferences.mm  PromptBuilder.cpp  PromptBuilder.h  SettingsWindowController.h  SettingsWindowController.mm
tests/: test_prompt_builder.cpp
